<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <LinearLayout

     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="24dip">


     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nev"/>

     <EditText
         android:id="@+id/etNev"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tipus"/>

     <Spinner
         android:id="@+id/spTipus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/targy"/>

     <Spinner
         android:id="@+id/spTargy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/datum"/>

     <DatePicker
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:datePickerMode="spinner"
         android:calendarViewShown="false"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nr_het"/>

     <EditText
         android:id="@+id/etHet"
         android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="0..15"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dip"
         android:text="@string/oraigeny"/>

     <EditText
         android:id="@+id/etOra"
         android:layout_width="match_parent"
         android:inputType="number"
         android:layout_height="wrap_content" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/megjegyzes"/>

     <EditText
         android:id="@+id/etMegj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />


 </LinearLayout>
</ScrollView>
